@@ -89,9 +89,18 @@
 #          Default:  false
 #          Example:  ENV_MANGLE  TRUE
 
+# Environment name:  COB_SET_DEBUG
+#   Parameter name:  debugging_mode
+#          Purpose:  to enable USE ON DEBUGGING procedures that were active
+#                    during compile-time because of WITH DEBUGGING MODE,
+#                    otherwise the code generated will be skipped
+#             Type:  boolean
+#          Default:  false
+#          Example:  COB_SET_DEBUG  1
+
 # Environment name:  COB_SET_TRACE
 #   Parameter name:  set_trace
-#          Purpose:  to enable to COBOL trace feature
+#          Purpose:  to enable COBOL trace feature
 #             Type:  boolean
 #          Default:  false
 #          Example:  SET_TRACE  TRUE
@@ -105,9 +114,9 @@
 
 # Environment name:  COB_CURRENT_DATE
 #   Parameter name:  current_date
-#          Purpose:  specify an alternate Date/Time to be returned to ACCEPT clauses
-#                    this is used for testing purposes or to tweak a missing offset
-#                    partial setting is allowed
+#          Purpose:  specify an alternate Date/Time to be returned to ACCEPT
+#                    clauses this is used for testing purposes or to tweak
+#                    a missing offset partial setting is allowed
 #             Type:  numeric string in format YYYYDDMMHH24MISS or date string
 #          Default:  the operating system date is used
 #          Example:  COB_CURRENT_DATE "2016/03/16 16:40:52"
@@ -162,7 +171,7 @@
 #   Parameter name:  varseq_format
 #          Purpose:  declare format used for variable length sequential files 
 #                    - different types and lengths precede each record
-#                    - 'length' is the data length & does not include the prefix
+#                    - 'length' is the data length, does not include the prefix
 #             Type:  0   means 2 byte record length (big-endian) + 2 NULs
 #                    1   means 4 byte record length (big-endian)
 #                    2   means 4 byte record length (local machine int)
@@ -295,5 +304,5 @@
 #          Default:  'end of program, please press a key to exit' (localized)
 #          Example:  COB_EXIT_MSG ''
 
-# Note: If you want to slightly speed up a program's startup time, remove all
-#       of the comments from the actual real file that is processed
+# Note: If you want to *slightly* speed up a program's startup time, remove all
+#       of the comments from the actual real configuration file that is processed
