@@ -4,6 +4,7 @@
 	* cobol85.conf, ibm-strict.conf, mvs-strict.conf, mf-strict.conf,
 	  rm-strict.conf: fixed "debugging-mode" to be "ok" (only use-for-debugging
 	  is obsolete in COBOL 85, debugging-mode became obsolete with COBOL 2002)
+	* runtime.cfg: included COB_SET_DEBUG in the documentation
 
 2017-10-06  Edward Hart <edward.dan.hart@gmail.com>
 
