@@ -1,4 +1,9 @@
 
+2017-11-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* codegen.c: change to USE FOR DEBUGGING procedures - don't generate a
+	  local cob_debugging_mode and use runtime setting instead
+
 2017-11-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* parser.y: only switch CALL ... BY VALUE to BY CONTENT for a single
